# semver-binary

./: Cargo.toml  README.md
src/: main.rs  recognize.rs
