[package]
name = "semver-binary"
version = "0.1.0"
authors = ["Lukas Nemec <lu.nemec@gmail.com>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/lunemec/semver-binary"
homepage = "https://github.com/lunemec/semver-binary"
documentation = "https://github.com/lunemec/semver-binary"
description = """
Semantic version manipulation application.
"""

[dependencies]
semver = "0.9.0"
semver-parser = "0.7.0"

[dependencies.clap]
version = "2"
# This removes libc from clap dependencies (for windows compatibility).
default-features = false

[features]
default = []